added styles and code refactoring to create page

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  main {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    @apply bg-slate-50 px-2 py-1 md:px-1;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  h1 {
+    @apply text-5xl
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  h4 {
+    @apply text-2xl
+  }
+
+  label {
+    @apply flex gap-2 justify-center items-center
+  }
+
+  input {
+    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+  }
+
+  .link {
+    @apply text-sky-600 font-semibold
+  }
+
+  .primary-button {
+    @apply  text-white bg-purple-700 hover:bg-purple-800 focus:ring-2 focus:ring-purple-300 font-medium rounded-md text-sm px-5 py-2.5 mb-2
+  }
+
+  .submit-button {
+    @apply text-white bg-green-700 hover:bg-green-800 focus:ring-2 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2
   }
 }
